--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "cheerio": "^1.0.0-rc.5",
     "discord.js": "^12.5.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
